# flecs-rs

./: .gitignore  .justfile  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  bindings.rs  build.rs  flecs.c  gxx_personality_v0_stub.cpp  readme.md  run_examples.sh
.cargo/: config  config.toml
.github/workflows/: ci.yml
benches/: Cargo.toml  ecs_compare.rs
benches/ecs_compare/: ecs_compare.rs
docs/: bench_notes.md  example_output.txt
examples/: dynamic_components.rs  entity_basics.rs  entity_hierarchy.rs  entity_iterate_components.rs  entity_prefabs.rs  entity_relations.rs  filters.rs  hello_world.rs  prefabs.rs  systems.rs
examples/entity/: basics.rs  hierarchy.rs  iterate_components.rs  prefabs.rs  relations.rs
examples/queries/: basics.rs
examples/systems/: basics.rs  delta_time.rs
flecs-api/: Cargo.toml
flecs-api/src/: binding_util.rs  cache.rs  component.rs  entity.rs  filter.rs  id.rs  lib.rs  query.rs  system.rs  world.rs
flecs-sys/: Cargo.toml  README.md  build.rs  flecs.h
flecs-sys/src/: bindings.rs  lib.rs
src/: binding_util.rs  cache.rs  component.rs  component_group.rs  entity.rs  filter.rs  id.rs  lib.rs  query.rs  system.rs  terms.rs  world.rs
static/: index.html
