[package]
name = "flecs"
version = "0.1.1"
edition = "2021"
description = "Rust bindings for the Flecs Entity Component System"
homepage = "https://www.flecs.dev"
repository = "https://github.com/jazzay/flecs-rs"
license = "MIT"
keywords = ["ecs", "game", "flecs"]
categories = ["game-engines", "data-structures"]
rust = "1.63"

[profile.release]
debug = true

[dependencies]
lazy_static = "1.4.0"

[build-dependencies]
bindgen = "0.63.0"
cc = "1.0.70"

[dev-dependencies]
hecs = "0.9.0"
bevy_ecs = "0.9.1"
flax = "0.3.2"
criterion = "0.3"

[[example]]
name="entity_basics"
path = "examples/entity/basics.rs"

[[example]]
name="entity_hierarchy"
path = "examples/entity/hierarchy.rs"

[[example]]
name="entity_iterate_components"
path = "examples/entity/iterate_components.rs"

[[example]]
name="prefabs"
path = "examples/entity/prefabs.rs"

[[example]]
name="relations"
path = "examples/entity/relations.rs"

[[example]]
name="dynamic_components"
test = true

[[example]]
name="hello_world"

[[example]]
name="filters"
test = true

[[example]]
name="queries_basics"
path = "examples/queries/basics.rs"

[[example]]
name="systems"
test = true

[[example]]
name="systems_basics"
path = "examples/systems/basics.rs"

[[example]]
name="systems_delta_time"
path = "examples/systems/delta_time.rs"

[[bench]]
name = "ecs_compare"
path = "benches/ecs_compare.rs"
harness = false