[package]
name = "flecs"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[workspace]
members = ["flecs-sys", "flecs-api", "benches"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
description = "Rust bindings for the Flecs Entity Component System"
homepage = "https://www.flecs.dev"
repository = "https://github.com/jazzay/flecs-rs"
license = "MIT"
keywords = ["ecs", "game", "flecs"]
categories = ["game-engines", "data-structures"]
rust-version = "1.68"

[profile.release]
# debug = true		# Don't accidently submit this!

# This option sadly results in 3X worse performance in Query::iter() on Arm
#	while the benefit is small in some areas. 
#	revisit if we can figure out / fix that perf degradation.
# lto = "fat"

[dependencies]
once_cell = "1.18"

[build-dependencies]
bindgen = "0.66"
c = "1"

[dev-dependencies]
hecs = "0.10.3"
bevy_ecs = "0.10.1"
flax = "0.4.0"
criterion = "0.5"

[[example]]
name = "entity_basics"
path = "examples/entity/basics.rs"
test = true

[[example]]
name = "entity_hierarchy"
path = "examples/entity/hierarchy.rs"
test = true

[[example]]
name = "entity_iterate_components"
path = "examples/entity/iterate_components.rs"
test = true

[[example]]
name = "prefabs"
path = "examples/entity/prefabs.rs"
test = true

[[example]]
name = "relations"
path = "examples/entity/relations.rs"
test = true

[[example]]
name = "dynamic_components"
test = true

[[example]]
name = "hello_world"
test = true

[[example]]
name = "filters"
test = true

[[example]]
name = "queries_basics"
path = "examples/queries/basics.rs"
test = true

[[example]]
name = "systems"
test = true

[[example]]
name = "systems_basics"
path = "examples/systems/basics.rs"
test = true

[[example]]
name = "systems_delta_time"
path = "examples/systems/delta_time.rs"
test = true
