[package]
name = "benches"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dev-dependencies]
flecs-api = { path = "../flecs-api" }
hecs = "0.10.3"
bevy_ecs = "0.10.1"
flax = "0.4.0"
criterion = "0.5"

[[bench]]
name = "ecs_compare"
path = "ecs_compare/ecs_compare.rs"
harness = false
