[package]
name = "flecs-sys"
description = "Provides low-level bindings to the Entity Component System (ECS) framework flecs"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
links = "flecs"

[dependencies]
once_cell = "1.18"

[build-dependencies]
bindgen = "0.66"
cc = "1"
regex = "1.8"

[features]
export_bindings = []
enable_export_symbols = [] # uses this feature with a Cdylib or a bin with the flag -Zexport-executable-symbols
